--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,9 @@ classifiers=[
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.9,<3.12"
 numpy = "==1.26.0"
+inference = "*"
 scipy = [
     { version = "1.10.0", python = "<3.9" },
     { version = "^1.10.0", python = ">=3.9" }
@@ -58,7 +59,7 @@ build = ">=0.10,<1.3"
 ruff = ">=0.1.0"
 mypy = "^1.4.1"
 pre-commit = "^3.3.3"
-tox = "^4.11.4"
+tox = "*"
 notebook = ">=6.5.3,<8.0.0"
 ipywidgets = "^8.1.1"
 jupytext = "^1.16.1"
